--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ sklearn/config.py
 torch/.ipynb_checkpoints/
 torch/neural_network/.ipynb_checkpoints/
 sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
+torch/model
