역전파 학습

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ torch/.ipynb_checkpoints/
 torch/neural_network/.ipynb_checkpoints/
 sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
 torch/model
+torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
