선형 회귀 학습

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ torch/neural_network/.ipynb_checkpoints/
 sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
 torch/model
 torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
+torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
