--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
 torch/model
 torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
 torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
+torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoints
