--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
 torch/model
 torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
 torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
-torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoints
+torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoint
+torch/*pytorch_deeplearning/4.WordEmbedding/.vector_cache
