--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
 torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
 torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoint
 torch/*pytorch_deeplearning/4.WordEmbedding/.vector_cache
+torch/*pytorch_deeplearning/5.RNN/.ipynb_checkpoints
