다대다 RNN 공부

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
 torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoint
 torch/*pytorch_deeplearning/4.WordEmbedding/.vector_cache
 torch/*pytorch_deeplearning/5.RNN/.ipynb_checkpoints
+torch/*pytorch_deeplearning/6.LSTM/.ipynb_checkpoints/
