--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoint
 torch/*pytorch_deeplearning/4.WordEmbedding/.vector_cache
 torch/*pytorch_deeplearning/5.RNN/.ipynb_checkpoints
 torch/*pytorch_deeplearning/6.LSTM/.ipynb_checkpoints/
+torch/*pytorch_deeplearning/7.Seq2Seq/.ipynb_checkpoints
