--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ torch/neural_network/.ipynb_checkpoints/
 sklearn/.ipynb_checkpoints/classifier-checkpoint.ipynb
 torch/model
 torch/pytorch_deeplearning/Perceptron/.ipynb_checkpoints
+torch/*pytorch_deeplearning/1.Tensor_Manipulation/.ipynb_checkpoints
 torch/*pytorch_deeplearning/2.Linear_Regression/.ipynb_checkpoints
 torch/*pytorch_deeplearning/4.WordEmbedding/.ipynb_checkpoint
 torch/*pytorch_deeplearning/4.WordEmbedding/.vector_cache
