--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ torch/*pytorch_deeplearning/5.RNN/.ipynb_checkpoints
 torch/*pytorch_deeplearning/6.LSTM/.ipynb_checkpoints/
 torch/*pytorch_deeplearning/7.Seq2Seq/.ipynb_checkpoint
 codingtest/.ipynb_checkpoints
-codingtest/dfs_bfs/.ipynb_checkpointss
+codingtest/dfs_bfs/.ipynb_checkpoints
