--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ torch/*pytorch_deeplearning/6.LSTM/.ipynb_checkpoints/
 torch/*pytorch_deeplearning/7.Seq2Seq/.ipynb_checkpoint
 codingtest/.ipynb_checkpoints
 codingtest/dfs_bfs/.ipynb_checkpoints
+codingtest/test/dfs_bfs/.ipynb_checkpoints
