--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ torch/*pytorch_deeplearning/7.Seq2Seq/.ipynb_checkpoint
 codingtest/.ipynb_checkpoints
 codingtest/dfs_bfs/.ipynb_checkpoints
 codingtest/test/dfs_bfs/.ipynb_checkpoints
+codingtest/implementation/.ipynb_checkpoints
