--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ codingtest/.ipynb_checkpoints
 codingtest/dfs_bfs/.ipynb_checkpoints
 codingtest/test/dfs_bfs/.ipynb_checkpoints
 codingtest/implementation/.ipynb_checkpoints
+torch/*pytorch_deeplearning/8.Attention/.ipynb_checkpoints/
+torch/*pytorch_deeplearning/9.Transformer/.ipynb_checkpoints/
