--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ codingtest/test/dfs_bfs/.ipynb_checkpoints
 codingtest/implementation/.ipynb_checkpoints
 torch/*pytorch_deeplearning/8.Attention/.ipynb_checkpoints/
 torch/*pytorch_deeplearning/9.Transformer/.ipynb_checkpoints/
+codingtest/data_structure/.ipynb_checkpoints/
