--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ codingtest/implementation/.ipynb_checkpoints
 torch/*pytorch_deeplearning/8.Attention/.ipynb_checkpoints/
 torch/*pytorch_deeplearning/9.Transformer/.ipynb_checkpoints/
 codingtest/data_structure/.ipynb_checkpoints/
+codingtest/data_structure/test/.ipynb_checkpoints/
