--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ torch/*pytorch_deeplearning/8.Attention/.ipynb_checkpoints/
 torch/*pytorch_deeplearning/9.Transformer/.ipynb_checkpoints/
 codingtest/data_structure/.ipynb_checkpoints/
 codingtest/data_structure/test/.ipynb_checkpoints/
+codingtest/algorithm/greedy/.ipynb_checkpoints/
+codingtest/data_structure/test/.ipynb_checkpoints/
