--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,5 @@ torch/*pytorch_deeplearning/9.Transformer/.ipynb_checkpoints/
 codingtest/data_structure/.ipynb_checkpoints/
 codingtest/data_structure/test/.ipynb_checkpoints/
 codingtest/algorithm/greedy/.ipynb_checkpoints/
-codingtest/data_structure/test/.ipynb_checkpoints/
+codingtest/greedy/.ipynb_checkpoints/
+codingtest/implementation//.ipynb_checkpoints/
