--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ codingtest/data_structure/test/.ipynb_checkpoints/
 codingtest/algorithm/greedy/.ipynb_checkpoints/
 codingtest/greedy/.ipynb_checkpoints/
 codingtest/implementation//.ipynb_checkpoints/
+torch/chatbot/koGPT2/config.py
