다이나믹 프로그래밍 공부

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ codingtest/algorithm/greedy/.ipynb_checkpoints/
 codingtest/greedy/.ipynb_checkpoints/
 codingtest/implementation//.ipynb_checkpoints/
 torch/chatbot/koGPT2/config.py
+codingtest/dynamic_programming/.ipynb_checkpoints/
+sklearn/.ipynb_checkpoints/
+torch/chatbot/koGPT2/.ipynb_checkpoints/
